--- a/Dispenser/Dispenser Debug.cfg
+++ b/Dispenser/Dispenser Debug.cfg
@@ -20,8 +20,8 @@ set STOP_WATCHDOG 1
 # STlink Debug clock frequency
 set CLOCK_FREQ 4000
 
-# use software system reset
-reset_config none
+# use hardware reset
+reset_config srst_only srst_nogate
 set CONNECT_UNDER_RESET 0
 
 source [find target/stm32f4x.cfg]
